kubernetes/template/echo/echo-http-response.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo-http-response
  labels:
    app: echo-http-response
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-http-response
  template:
    metadata:
      labels:
        app: echo-http-response
    spec:
      containers:
        - name: echo-http-response
          image: python:3.7-alpine3.17
          command:
            - "python3"
            - "/root/main.py"
            - "80"
          volumeMounts:
            - name: echo-http-response-config
              mountPath: /root/main.py
              subPath: main.py
              readOnly: true
      volumes:
        - name: echo-http-response-config
          configMap:
            name: echo-http-response-config
---
kind: Service
apiVersion: v1
metadata:
  name: echo-http-response
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: echo-http-response
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-http-response
spec:
  rules:
  - host: $(DOMAIN)
    http:
      paths:
      - backend:
          service:
            name: echo-http-response
            port:
              number: 80
        pathType: Prefix
        path: /echo(/|$)(.*)
